services/vaultwarden/vaultwarden.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  labels:
    app.kubernetes.io/name: vaultwarden
spec:
  selector:
    app.kubernetes.io/name: vaultwarden
  ports:
    - name: http
      port: 80
      targetPort: http
